--- a/HTML/EmployeePayroll.html
+++ b/HTML/EmployeePayroll.html
@@ -136,13 +136,26 @@
                         <option value="Dec">December</option>
                     </select>
                     <select id="year" name="Year">
-                        <option value="2022">2022</option>
-                        <option value="2021">2021</option>
+                        <option value="2020">2022</option>
+                        <option value="2020">2021</option>
                         <option value="2020">2020</option>
                         <option value="2019">2019</option>
                         <option value="2018">2018</option>
                         <option value="2017">2017</option>
                     </select>
+                </div>
+            </div>
+            <!--UC6-->
+            <div class="row-content">
+                <label class="label text" for="notes">Notes</label>
+                <textarea id="notes" class="input" name="Notes" placeholder="Enter Notes...." style="height:100px"></textarea>
+            </div>
+
+            <div class="buttonParent">
+                <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
+                <div class="submit-reset">
+                    <button type="submit" class="button submitButton" id="submitButton">Submit</button>
+                    <button type="reset" class="resetButton button">Reset</button>
                 </div>
             </div>
         </form>
