Added : event listener

--- a/HTML/EmployeePayroll.html
+++ b/HTML/EmployeePayroll.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--StyleSheet-->
-    <link rel="stylesheet" href="/css/empForm.css">
+    <link rel="stylesheet" href="../CSS/EmployeePayRoll.css">
     <title>Employee Payroll App</title>
 </head>
 <body>
@@ -136,8 +136,8 @@
                         <option value="Dec">December</option>
                     </select>
                     <select id="year" name="Year">
-                        <option value="2020">2022</option>
-                        <option value="2020">2021</option>
+                        <option value="2022">2022</option>
+                        <option value="2021">2021</option>
                         <option value="2020">2020</option>
                         <option value="2019">2019</option>
                         <option value="2018">2018</option>
@@ -152,7 +152,7 @@
             </div>
 
             <div class="buttonParent">
-                <a href="./empHomePage.html" class="resetButton button cancelButton">Cancel</a>
+                <a href="../HTML/EmployeePayrollHomePage.html" class="resetButton button cancelButton">Cancel</a>
                 <div class="submit-reset">
                     <button type="submit" class="button submitButton" id="submitButton">Submit</button>
                     <button type="reset" class="resetButton button">Reset</button>
@@ -160,5 +160,6 @@
             </div>
         </form>
     </div>
+    <script src="../JS/EmployeePayRoll.js"></script> 
 </body>
 </html>
