--- a/HTML/EmployeePayroll.html
+++ b/HTML/EmployeePayroll.html
@@ -28,6 +28,7 @@
             <div class="row-content">
                 <label class="lable text" for="name">Name </label>
                 <input class="input" type="text" id="name" name="name" placeholder="Your Name.." required>
+                <error-output class="text-error" for="text"></error-output>
             </div>
             <!--UC3-->
             <div class="row-content">
@@ -161,5 +162,6 @@
         </form>
     </div>
     <script src="../JS/EmployeePayRoll.js"></script> 
+    <script src="../JS/EmployeePayrollData.js"></script> 
 </body>
 </html>
