--- a/HTML/EmployeePayrollHomePage.html
+++ b/HTML/EmployeePayrollHomePage.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--StyleSheet-->
-    <link rel="stylesheet" href="../CSS/EmployeePayRollHome.css">
+    <link rel="stylesheet" href="/CSS/EmployeePayrollHomePage.css">
     <title>Employee Payroll HomePage</title>
 </head>
 <body>
@@ -26,12 +26,42 @@
                 Employee Details
                 <div class="emp-count">10</div>
             </div>
-            <div onclick="location.href='../HTML/EmployeePayRoll.html'" class="add-button">
+            <div onclick="location.href='../pages/empForm.html'" class="add-button">
                 <div class="plus-icon">
                     <img src="../assets/icons/add-24px.svg" alt="Add user logo">
                 </div>
                 <div>Add User</div>
             </div>
         </div>
+        <div class="table-main">
+            <table id="display" class="table">
+                <tr style=" background: #112538 0% 0% no-repeat padding-box;;">
+                    <th></th>
+                    <th style="color: #ffffff">Name</th>
+                    <th style="color: #ffffff">Gender</th>
+                    <th style="color: #ffffff">Department</th>
+                    <th style="color: #ffffff">Salary</th>
+                    <th style="color: #ffffff">StartDate</th>
+                    <th style="color: #ffffff">Actions</th>
+                </tr>
+                <td>
+                    <img class="profile" src="../assets/profile-images/Ellipse -1.png">
+
+                </td>
+                <td>Preeti Ghatage</td>
+                <td>Female</td>
+                <td>
+                    <div class="dept-label">Engineer</div>
+                    <div class="dept-label">Others</div>
+                </td>
+                <td>400000</td>
+                <td>22 July 2020</td>
+                <td>
+                    <img alt="delete" src="../assets/icons/delete-black-18dp.svg">
+                    <img alt="edit" src="../assets/icons/create-black-18dp.svg">
+                </td>
+            </table>
+        </div>
+    </div>
 </body>
 </html>
