Added : curd operation

--- a/HTML/EmployeePayrollHomePage.html
+++ b/HTML/EmployeePayrollHomePage.html
@@ -26,7 +26,7 @@
                 Employee Details
                 <div class="emp-count">10</div>
             </div>
-            <div onclick="location.href='../pages/empForm.html'" class="add-button">
+            <div onclick="location.href='../HTML/EmployeePayRoll.html'" class="add-button">
                 <div class="plus-icon">
                     <img src="../assets/icons/add-24px.svg" alt="Add user logo">
                 </div>
@@ -39,6 +39,10 @@
             </table>
         </div>
     </div>
+    <script src="../JS/EmployeePayRoll.js"></script>
     <script src="../JS/EmployeePayRollHome.js"></script>
+    <script src="../JS/EmployeePayrollData.js"></script>
+    <script src="../JS/site_properties.js"></script>
+    <script src="../JS/utility.js"></script>
 </body>
 </html>
